--- a/static/css/index.css
+++ b/static/css/index.css
@@ -171,7 +171,7 @@
 /* attraction */
 .attraction__board{
     /* gap: 30px; */
-    gap: 30px 2.5%;
+    gap: 30px;
     padding: 15px;
 
     display: flex;
@@ -221,6 +221,8 @@
     font-family: "Noto Sans TC";
     color: #FFFFFF;
     line-height: 13.3px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 
     display: flex;
     text-align: center;
@@ -259,8 +261,8 @@
     .attraction__element{
         /* min-width: 270px;
         max-width: 270px; */
-        width: 270px;
-        height: 242px;
+        width: 268px;
+        height: 240px;
         /* min-width: 22%;
         max-width: 22%;
         aspect-ratio: 270 / 242; */
@@ -280,8 +282,8 @@
     .attraction__element{
         /* min-width: 270px;
         max-width: 270px; */
-        width: 270px;
-        height: 242px;
+        width: 268px;
+        height: 240px;
         /* min-width: 22%;
         max-width: 22%;
         aspect-ratio: 270 / 242; */
@@ -298,8 +300,8 @@
     .attraction__element{
         /* min-width: 322px;
         max-width: 322px; */
-        width: 322px;
-        height: 280px;
+        width: 320px;
+        height: 278px;
     }
     .attraction__element-image{
         height: 235px;
